Updated index.html to change message. lksdfjlkasjfk

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -6,6 +6,6 @@
   <title>Welcome to OpenShift Builds</title>
 </head>
 <body>
-<h1>Hello, OpenShift Builds.</h1>
+<h1>Hello, OpenShift Builds Birrllllll.</h1>
 </body>
 </html>
